# carnero.net

./: .cursorrules  .gitignore  LICENSE  README.md  about.html  atom.xml  index.html  publications.html  style.css
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
content/: LICENSE  index.md  publications.md
content/blog/: _managers.md  _this_website.md  _tips_cicd_development.md  index.md  lessons_rome.md  lets_post.md  managers.md  tips_cicd_development.md
content/evergreens/: cicd_development.md  index.md
data/: config.yaml
data/content/: _sample.md  index.md
data/content/blog/: _sample.md  config.yaml  lessons_rome.md  lets_post.md
data/content/evergreens/: cicd_development.md  config.yaml  index.md
data/static/: style.css
data/templates/: page.html  section_index.html
data/templates/blog/: index.html
fast-markdown/: .flake8  .gitignore  README.md  environment.yml  pyproject.toml
fast-markdown/scripts/: bundle.sh
fast-markdown/src/fast-markdown/: atom_feed.py  build_content.py  bundle.py  content.py  settings.py
fast-markdown/tests/fast-markdown/: content_test.py  markdown_properties_test.py
posts/: placeholder.md  posts.yml  this_website.md
posts/templates/: entry.html  landing.html
scripts/: build.sh  bundle.sh
scripts/blog_generator/: atom_feed.py  build_blog.py  build_feed.py  build_posts.py  environment.yml  feed.py  feedgen_patch.py  landing.py  multilang.py  parse_post.py  post.py  requirements.txt
site_builder/: README.md  environment.yml  pyproject.toml
site_builder/scripts/: bundle.sh
site_builder/src/site_builder/: atom_feed.py  build_content.py  bundle.py  content.py
site_builder/tests/site_builder/: content_test.py  markdown_properties_test.py
site_generator/: atom_feed.py  build_content.py  bundle.py  content.py  content_test.py  environment.yml  markdown_properties.py  markdown_properties_test.py  requirements-dev.txt
static/: style.css
templates/: index.html
templates/blog/: index.html  post.html
writings/: README.md
