[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-markdown"
version = "0.1.0"
authors = [
  { name="Javier Carnero"},
]
description = "Fastest loading static site generator from markdown content, which filosophy is to create a pure html & css site (no javascript), used for https://carnero.net/"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/pypa/fast-markdown"
Issues = "https://github.com/pypa/fast-markdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fast-markdown"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.coverage.run]
omit = [
  "tests/*",
]
source = [
  "src/fast-markdown"
]
relative_files = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.paths]
source = [
    "src/fast-markdown",
    "tests/"
]

[tool.isort]
profile = 'black'
