[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Carnero.Net"
version = "0.0.1"
authors = [
  { name="Javier Carnero"},
]
description = "Site Carnero.Net contents and builder"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/pypa/carneronet"
Issues = "https://github.com/pypa/carneronet/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/site_builder"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.coverage.run]
omit = [
  "tests/*",
]
source = [
  "src/site_builder"
]
relative_files = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.paths]
source = [
    "src/site_builder",
    "tests/"
]

[tool.isort]
profile = 'black'
